# bigcases2

./: .dockerignore  .env.example  .gitignore  .imgbotconfig  .pre-commit-config.yaml  .replit  ARCHITECTURE.md  CHANGES.md  LICENSE  README.md  manage.py  mypy.ini  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-dev.yml  bulid-and-deploy.yml  lint.yml  sentry-release.yml  tests.yml
bc/: settings.py  urls.py
bc/assets/static-global/fonts/: -CooperHewitt-FontLog.txt
bc/assets/static-global/js/: checkbox-group.js  dropdown.js  htmx.js  htmx.min.js  suggest-a-bot.js
bc/assets/static-global/json/: manifest.json
bc/assets/templates/: 404.html  429.html  base.html  post.html
bc/assets/templates/includes/: action-button.html  banner.html  follow-button.html  footer-link.html  footer.html  grid_list_item.html  header.html  messages.html  regular-anchor.html  submit-button.html  table-with-cases.html  transparent-button.html  under-construction.html  under_construction.html  yellow-button.html
bc/beats/: apps.py  models.py
bc/beats/migrations/: 0001_initial.py  0002_initial.py
bc/cases/: api_serializers.py  api_views.py  apps.py  models.py  selectors.py  services.py  views.py
bc/cases/management/commands/: add.py  list-subscriptions.py  load-bc1.py  lookup.py  match-bcb1-cases.py  search.py  subscribe.py
bc/cases/migrations/: 0001_initial.py  0002_alter_docket_cl_alerts.py  0003_alter_docket_cl_docket_id.py
bc/cases/templates/: docket.html
bc/cases/utils/: courtlistener.py
bc/channel/: admin.py  api_views.py  apps.py  models.py  selectors.py  signals.py  tasks.py  urls.py  views.py
bc/channel/management/commands/: mastodon-subscribe.py  mastodon-unsubscribe.py  post.py
bc/channel/migrations/: 0001_initial.py  0002_post.py  0003_alter_channel_user.py  0004_alias_channel_alias.py  0004_group_channel_group.py  0005_channel_access_token_channel_access_token_secret.py  0006_group_overview_group_slug.py  0007_group_border_color.py  0008_alter_channel_service_alter_post_object_id.py  0009_alter_channel_service.py
bc/channel/templates/: threads_code.html
bc/channel/tests/: factories.py  test_bluesky_connector.py  test_masto_connector.py  test_models.py  test_selectors.py  test_twitter_connector.py  test_utils.py
bc/channel/utils/: masto.py
bc/channels/: api_views.py  apps.py  models.py  views.py
bc/channels/migrations/: 0001_initial.py
bc/channels/utils/: masto.py
bc/core/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
bc/core/migrations/: 0001_initial.py  0002_alter_bannerconfig_banner_button_link_and_more.py
bc/core/templatetags/: extras.py  web_extras.py
bc/core/tests/: test_make_dev_data.py  test_mastodon_template.py  test_templates.py  test_text_images.py
bc/core/utils/: cloudfront.py  color.py  commands.py  connections.py  context_processors.py  crypto.py  faker_legal_citations.py  faker_legalese.py  images.py  legal_provider.py  messages.py  microservices.py  network.py  redis.py  s3.py  storage.py  string_utils.py  urls.py
bc/core/utils/status/: base.py  (+3 more)
bc/people/: apps.py  models.py
bc/people/migrations/: 0001_initial.py
bc/settings/: __init__.py  django.py  misc.py
bc/settings/project/: email.py  security.py  testing.py
bc/sponsorship/: admin.py  apps.py  emails.py  models.py  selectors.py  services.py  signals.py  utils.py
bc/sponsorship/migrations/: 0001_initial.py  0002_sponsorship_watermark_message.py
bc/sponsorship/tests/: factories.py  test_selectors.py  test_services.py
bc/subscription/: admin.py  api_permissions.py  api_views.py  apps.py  exceptions.py  forms.py  models.py  selectors.py  services.py  signals.py  tasks.py  tests.py  types.py  urls.py  views.py
bc/subscription/migrations/: 0001_initial.py  0002_filingupdate.py  0002_filingwebhookevent_and_more.py  0003_filingwebhookevent_description_and_more.py  0003_filingwebhookevent_description_subscription_cl_slug_and_more.py  0003_remove_subscription_pacer_court_id_and_more.py  0004_rename_description_filingwebhookevent_document_description.py  0005_filingwebhookevent_cl_doc_id.py  0005_filingwebhookevent_doc_id.py  0006_alter_filingwebhookevent_status_noop.py  0007_alter_filingwebhookevent_status_noop.py  0008_subscription_channel.py  0009_subscription_article_url.py  0010_alter_filingwebhookevent_pacer_doc_id.py
bc/subscription/templates/: add-case.html
bc/subscription/tests/: factories.py  test_selectors.py  test_tasks.py  test_utils.py
bc/subscription/utils/: courtlistener.py  exceptions.py
bc/users/: admin.py  apps.py  forms.py  managers.py  models.py  selectors.py  services.py  signals.py  types.py  urls.py  views.py
bc/users/migrations/: 0001_initial.py  0002_alter_user_affiliation.py  0002_alter_user_allow_follow_alter_user_allow_login_and_more.py  0003_user_activation_key_user_email_confirmed_and_more.py  0004_alter_user_activation_key.py  0004_remove_user_activation_key_remove_user_key_expires.py
bc/users/tests/: factories.py  test_selectors.py  test_views.py
bc/users/utils/: email.py
bc/web/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bc/web/migrations/: 0001_initial.py  0002_rename_name_botsuggestion_bot_name_and_more.py
bc/web/static_src/: package-lock.json  package.json  tailwind.config.js
bc/web/templates/: about.html  collaboration.html  docket.html  homepage.html  little-cases.html  little_cases.html  successful-submission.html  successful_submission.html
bigcases2/: __init__.py  app.py  bcb1.py  cli.py  courtlistener.py  db.py  exceptions.py  garbage.py  masto.py  misc.py  models.py  pages.py  registration.py  schema.sql  twitter.py
bigcases2/templates/: base.html  case.html  home.html
data/: bigcases.json
database/: Dockerfile  README.md  bigcases2-ddl.sql  schema.sql
docker/bigcasesbot/: compose.yaml  docker-compose.yml
docker/django/: Dockerfile  Makefile
docker/django/wsgi-configs/: wsgi.py
scripts/: get-threads-keys.py  get-twitter-keys.py  get_mastodon_keys.py  twitter-script.md
tests/: cl_post.json
(+63 files in other folders)
