[tool.poetry]
authors = ["Free Law Project <info@free.law>"]
classifiers = [
  # "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
description = "Big Cases Bot 2"
keywords = ["legal", "courts", "bots", "twitter", "mastodon"]
license = "AGPL-3.0-or-later"
maintainers = ["Free Law Project <info@free.law>"]
name = "Big Cases Bot 2"
readme = "README.md"
repository = "https://github.com/freelawproject/bigcases2"
version = "0.0.1"

[tool.poetry.urls]
"Organisation Homepage" = "https://free.law/"

[tool.poetry.dependencies]
python = "^3.11"
art = "^6.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
"Mastodon.py" = {extras = ["cryptography"], version = "^1.8.0"}
cryptography = "^41.0.3"
http-ece = "^1.1.0"
psycopg2-binary = "^2.9.6"
ansicolors = "^1.1.8"
prettytable = "^3.8.0"
courts-db = "^0.10.17"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
sentry-sdk = "^1.29.2"
django-csp = "^3.7"
redis = "^4.6.0"
django-rq = "^2.8.1"
gunicorn = "^21.2.0"
ipython = "^8.20.0"
pillow = "^10.2.0"
django-storages = "^1.13.2"
boto3 = "^1.28.30"
django-tailwind = "^3.6.0"
django-ratelimit = "^4.1.0"
twitterapi = "^2.8.2"
django-ses = "^3.5.0"
django-htmx = "^1.16.0"
factory-boy = "^3.3.0"
faker = "^19.3.1"
disposable-email-domains = "^0.0.90"
django-hcaptcha = "^0.2.0"
beautifulsoup4 = "^4.12.2"
django-permissions-policy = "^4.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^0.991"
pylint = "^2.16.1"
wheel = "^0.40.0"
pre-commit = "^3.3.3"
flynt = "^0.77"
django-stubs = "^4.2.0"
types-requests = "^2.31.0.1"
types-redis = "^4.6.0.2"
ipython = "^8.20.0"
django-debug-toolbar = "^4.2.0"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}

[tool.black]
include = '''.*\.pyi?$'''
exclude = '''
(
      \.eggs
    | .*\.egg-info
    | .*migrations.*
    | \.mypy_cache
    | __pycache__
    | \.venv
)
'''
line-length = 79


[tool.isort]
profile = "black"
line_length = 79

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "79"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
bigcases2 = "bigcases2.cli:cli"
