[tool.poetry]
authors = ["Free Law Project <info@free.law>"]
classifiers = [
  # "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
description = "Big Cases Bot 2"
keywords = ["legal", "courts", "bots", "twitter", "mastodon"]
license = "AGPL-3.0-or-later"
maintainers = ["Free Law Project <info@free.law>"]
name = "Big Cases Bot 2"
readme = "README.md"
repository = "https://github.com/freelawproject/bigcases2"
version = "0.0.1"
package-mode = false

[tool.poetry.urls]
"Organisation Homepage" = "https://free.law/"

[tool.poetry.dependencies]
ada-url = "^1.15.3"
python = "^3.11"
art = "^6.3"
requests = "^2.32.0"
python-dotenv = "^1.0.0"
"Mastodon.py" = {extras = ["cryptography"], version = "^1.8.0"}
cryptography = "^43.0.1"
http-ece = "^1.2.0"
psycopg2-binary = "^2.9.6"
ansicolors = "^1.1.8"
prettytable = "^3.12.0"
courts-db = "^0.10.17"
Django = "^5.1.4"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
sentry-sdk = "^2.14.0"
django-csp = "^3.8"
redis = "^5.1.0"
django-rq = "^2.10.2"
gunicorn = "^23.0.0"
ipython = "^8.27.0"
pillow = "^11.0.0"
django-storages = "^1.14.2"
boto3 = "^1.35.21"
django-tailwind = "^3.8.0"
django-ratelimit = "^4.1.0"
twitterapi = "^2.8.2"
django-ses = "^4.1.0"
django-htmx = "^1.19.0"
factory-boy = "^3.3.0"
faker = "^30.1.0"
disposable-email-domains = "^0.0.90"
django-hcaptcha = "^0.2.0"
beautifulsoup4 = "^4.12.2"
django-permissions-policy = "^4.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.10.0"
pylint = "^2.16.1"
wheel = "^0.44.0"
pre-commit = "^4.0.1"
flynt = "^0.77"
django-stubs = "^5.1.0"
types-requests = "^2.32.0.20240523"
types-redis = "^4.6.0.2"
ipython = "^8.27.0"
django-debug-toolbar = "^4.4.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.black]
include = '''.*\.pyi?$'''
exclude = '''
(
      \.eggs
    | .*\.egg-info
    | .*migrations.*
    | \.mypy_cache
    | __pycache__
    | \.venv
)
'''
line-length = 79

[tool.'django-stubs']
django_settings_module = "bc.settings"

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true
plugins = "mypy_django_plugin.main"
exclude = "migrations/*"

[[tool.mypy.overrides]]
module="django_stubs_ext.*"
follow_imports="normal"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "79"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
