[project]
name = "big-cases-bot-2"
version = "0.0.1"
description = "Big Cases Bot 2"
authors = [{ name = "Free Law Project", email = "info@free.law" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [
    "legal",
    "courts",
    "bots",
    "twitter",
    "mastodon",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

urls.Repository = "https://github.com/freelawproject/bigcases2"
urls."Organisation Homepage" = "https://free.law/"

dependencies = [
    "Django>=5.1.9,<5.3",
    "Mastodon.py>=2.0.1",
    "ada-url>=1.23.0",
    "ansicolors>=1.1.8",
    "art~=6.5",
    "beautifulsoup4>=4.13.3",
    "boto3>=1.37.18",
    "courts-db>=0.10.17",
    "cryptography>=44.0.1",
    "disposable-email-domains>=0.0.90",
    "django-csp~=3.8",
    "django-environ>=0.12.0",
    "django-hcaptcha>=0.2.0",
    "django-htmx>=1.23.0",
    "django-permissions-policy>=4.26.0",
    "django-ratelimit>=4.1.0",
    "django-rq>=3.0.0",
    "django-ses>=4.4.0",
    "django-storages>=1.14.2",
    "django-tailwind>=4.0.1",
    "djangorestframework>=3.16.0",
    "factory-boy>=3.3.0",
    "faker>=37.1.0",
    "gunicorn>=23.0.0",
    "http-ece>=1.2.0",
    "ipython>=9.0.2",
    "pillow>=11.0.0",
    "prettytable>=3.16.0",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "requests>=2.32.0,",
    "sentry-sdk>=2.27.0",
    "twitterapi>=2.8.2",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "wheel>=0.45.1",
    "pre-commit>=4.2.0",
    "django-stubs>=5.2.0",
    "types-requests>=2.32.0.20240523",
    "types-redis>=4.6.0.2",
    "ipython>=9.0.2",
    "django-debug-toolbar>=5.2.0",
    "django-tailwind[reload]>=4.0.1",
]

[tool.uv]
package = false

[tool.'django-stubs']
django_settings_module = "bc.settings"

[tool.mypy]
ignore_missing_imports = true
plugins = "mypy_django_plugin.main"
exclude = "migrations/*"

[[tool.mypy.overrides]]
module="django_stubs_ext.*"
follow_imports="normal"

[tool.ruff]
line-length = 79
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
]
